new proj/src/objects/JSA__c.object
<CustomObject>
    <description>Used for the production of the JSA sheet</description>
    <fields>
        <fullName>GE_DS_Are_appropriate_lockouts_in_place__c</fullName>
        <label>40. Are appropriate lockouts in place?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Are_other_contractors_in_the_area__c</fullName>
        <label>43. Are other contractors in the area?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Barricadeor_warning_signs_required__c</fullName>
        <label>23. Barricade or warning signs required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Can_GE_work_area_be_isolated__c</fullName>
        <inlineHelpText>Can the GE work area be isolated/separated?</inlineHelpText>
        <label>22. Can GE work area be isolated?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Care_Manager_Mobile_Number__c</fullName>
        <label>Care Manager Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_DS_Care_Manager_Name__c</fullName>
        <label>Care Manager Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Care_Manager_Office_Number__c</fullName>
        <label>Care Manager Office Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_DS_Chemical_Identified__c</fullName>
        <label>27. Chemical Identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Chemical_hazard_present__c</fullName>
        <label>26. Chemical hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Confined_Space_entry_required__c</fullName>
        <label>34. Confined Space entry required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Customer_Training_Complete__c</fullName>
        <label>3. GE and Customer Training Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Do_any_other_hazards_exist__c</fullName>
        <label>44. Do any other hazards exist?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Doescustomer_require_job_procedure__c</fullName>
        <label>36. Does customer require job procedure?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_DustMist_Fume_Vapor_hazard_present__c</fullName>
        <label>15. Dust/Mist/Fume/Vapor hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_EHS_Manager_Mobile_Number__c</fullName>
        <label>EHS Manager Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_DS_EHS_Manager_Name__c</fullName>
        <label>EHS Manager Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_EHS_Manager_Office_Number__c</fullName>
        <label>EHS Manager Office Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_DS_Electrical_shock_hazard_present__c</fullName>
        <label>19. Electrical shock hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Excessive_noise_hazard_present__c</fullName>
        <label>13. Excessive noise hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Eye_injury_hazard_present__c</fullName>
        <label>14. Eye injury hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Fire_Hazard__c</fullName>
        <label>30. Fire Hazard?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Fire_hazard_present__c</fullName>
        <label>17. Fire hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Fireextinguisherlocation_identifie__c</fullName>
        <label>18. Fire Extinguisher Location Known?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_General_Comments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_Have_tools_been_inspected__c</fullName>
        <label>39. Have tools been inspected?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Hazardous_wastes_generated__c</fullName>
        <label>33. Hazardous wastes generated?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Health_Hazard__c</fullName>
        <label>29. Health Hazard?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Is_special_equipment_required__c</fullName>
        <label>38. Is special equipment required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_JSA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>JSA</relationshipLabel>
        <relationshipName>JSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_DS_JSA_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_DS_JSA_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>JSA</relationshipLabel>
        <relationshipName>JSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_DS_List_Evacuation_Safe_Refuge_Area__c</fullName>
        <label>10. List Evacuation &quot;Safe Refuge&quot; Area</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_List_Nearest_First_Aid_Station__c</fullName>
        <label>7. List Nearest First Aid Station</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_List_emergency_evacuation_route_s__c</fullName>
        <label>9. List emergency evacuation route(s)</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Lock_Out_Tag_Out_required__c</fullName>
        <label>24. Lock-Out/Tag-Out required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Lone_Worker__c</fullName>
        <inlineHelpText>* Lone workers must review, and ensure compliance with, the GE Energy Lone Worker policy.</inlineHelpText>
        <label>Lone Worker?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_MSDS_Reviewed_Location__c</fullName>
        <label>28. MSDS Reviewed?  Location?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Others_working_overhead__c</fullName>
        <label>20. Others working overhead?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_PinchCut_Shear_Crush_hazard_presen__c</fullName>
        <label>12.Pinch/Cut/Shear/Crush hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Pre_job_Safety_Discussion_Topic__c</fullName>
        <label>Pre-job Safety Discussion Topic:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_Reactivity_Hazard__c</fullName>
        <label>31. Reactivity Hazard?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Safety_Shower_Eye_wash_available__c</fullName>
        <label>32. Safety Shower/Eye wash available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Safety_procedures_reviewed__c</fullName>
        <label>37. Safety procedures reviewed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Safety_responsibilities_reviewed__c</fullName>
        <inlineHelpText>Safety responsibilities reviewed and understood by GE and other personnel? (GE/Customer)</inlineHelpText>
        <label>2. Safety Responsibilities Reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Service_Manager_Mobile_Number__c</fullName>
        <label>Service Manager Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_DS_Service_Manager_Name__c</fullName>
        <label>Service Manager Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Service_Manager_Office_Number__c</fullName>
        <label>Service Manager Office Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_DS_Service_Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Service / Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_DS_Slip_Trip_Fall_hazard_present__c</fullName>
        <label>11. Slip/Trip/Fall hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Temperature_Stress_hazard_present__c</fullName>
        <label>16. Temperature Stress hazard present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Traffic_or_moving_vehicle_hazard__c</fullName>
        <label>21. Traffic or moving vehicle hazard?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Will_customer_s_procedure_be_used1__c</fullName>
        <label>35. Will customer&apos;s procedure be used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Will_customer_s_procedure_be_used__c</fullName>
        <label>25. Will customer&apos;s procedure be used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>JSA</relationshipLabel>
        <relationshipName>JSA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_DS_Work_Permit_required__c</fullName>
        <description>Is a &quot;Work Permit&quot; required by the customer?</description>
        <label>4. Is a &quot;Work Permit&quot; required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_Work_Site_Comments__c</fullName>
        <label>Work Site Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_emergency_medical_clinic_hospital__c</fullName>
        <description>List emergency medical clinic / hospital:</description>
        <label>8. List Emergency Medical Clinic</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_machine_disassembly_required__c</fullName>
        <label>41. Is any machine disassembly required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_plant_alarm_sounds_and_actions__c</fullName>
        <description>Describe plant alarm sounds and actions:</description>
        <label>5. Describe Plant Alarm Sound &amp; Actions</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_plant_emergency_phone_number_s__c</fullName>
        <label>6. List plant emergency phone number(s)</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_pre_Mobilization_checklist__c</fullName>
        <label>1. Pre-Mobilization checklist attached?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DS_protective_equipment_required__c</fullName>
        <label>42. Special Protective Equip. Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participating_Technician_1__c</fullName>
        <label>Participating Technician 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Technician_2__c</fullName>
        <label>Participating Technician 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Technician_3__c</fullName>
        <label>Participating Technician 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Technicians__c</fullName>
        <inlineHelpText>Use this area to capture the names of the Technicians who participated in the Job Safety Meeting. Please separate each technician by a new line.</inlineHelpText>
        <label>Participating Technicians</label>
        <type>TextArea</type>
    </fields>
    <label>JSA</label>
    <nameField>
        <displayFormat>JSA-{0000000}</displayFormat>
        <label>Job Safety Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JSA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>